# learning_ai_9_05_2026_1

./: .env.example  Dockerfile  Makefile  README.md  pyproject.toml
.cursor/rules/: conventions.mdc  workflow.mdc
docs/: idea.md  tasklist.md  vision.md
docs/adrs/: 0001-use-uv-for-python.md  0002-python-as-implementation-language.md  0003-telegram-as-user-channel.md  0004-llm-via-api.md
src/telegram_llm_bot/: config.py  handlers.py  llm_client.py  main.py
