[project]
name = "telegram-llm-bot"
version = "0.1.0"
requires-python = "==3.12.*"
dependencies = [
    "aiogram>=3.17",
    "openai>=1.0",
    "python-dotenv>=1.0",
]

[project.scripts]
telegram-llm-bot = "telegram_llm_bot.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/telegram_llm_bot"]
